--- a/src/app/tasks/components/task-list/task-list.component.html
+++ b/src/app/tasks/components/task-list/task-list.component.html
@@ -1,17 +1,13 @@
 <div>
-    <button class="btn btn-primary"
-        (click)="onCreateTask()">New Task</button>
-    <br><br>
+  <button class="btn btn-primary" (click)="onCreateTask()">New Task</button>
+  <br /><br />
 
-    <app-task
-      *ngFor="let task of tasks | async"
-      [task]="task"
-      (completeTask)="onCompleteTask($event)"
-      (editTask)="onEditTask($event)"
-      (deleteTask)="onDeleteTask($event)">
-    </app-task>
+  <app-task
+    *ngFor="let task of (tasksState$ | async).data"
+    [task]="task"
+    (completeTask)="onCompleteTask($event)"
+    (editTask)="onEditTask($event)"
+    (deleteTask)="onDeleteTask($event)"
+  >
+  </app-task>
 </div>
-
-
-
-
